# AoC2022-haskell

day1/: day1.cabal
day1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day2/: LICENSE  day2.cabal
day2/app/: Main.hs
